Comment out code in RestoIndexItemButton to prevent stack overflow

--- a/frontend/src/components/RestaurantIndexPage/RestaurantIndexPage.css
+++ b/frontend/src/components/RestaurantIndexPage/RestaurantIndexPage.css
@@ -170,6 +170,7 @@
     font-weight: bold;
     color: rgb(101, 101, 101);
     text-decoration: none;
+    cursor: pointer;
 }
 
 #cuisineFilterButton > a {
